News on the plotutils+ package.  See ONEWS for the news file for
the GNU plotutils package that plotutils+ is based on.


Version 3.1, 2020-12-??:

Still in development...

Changes in this version are largely aimed at making the 'graph'
program work better for interactively displaying data produced 
by other programs, as in pipelines of the form

    program | graph -TX (other options)

Details of changes:

graph:   There is a new --wait (or -i) command-line option, relevant
         only for X Window display (with -TX).  If it is set, the 
         'graph' program will wait until the plot window has been 
         closed by the user before exitting (or the user may terminate
         the program manually, e.g., with Control-C). 

         A new set of default plot parameters can now be enabled with
         the --new-defaults (or -n) command-line option.  These defaults
         improve the aesthetics of plots and reduce wasted space.  They
         are especially appropriate for plotting in a X window.

libplot: The API for X Plotters now has a new WAIT_ON_DELETE parameter,
         which if set to "yes" causes a window delete operation to wait
         until the window or windows that were popped up are closed
         by the user. The default is "no" (the old behaviour).


Version 3.0, 2020-11-30:

This release is functionally identical to GNU plotutils 2.6, except
for some bug fixes.  Some fixes are from the Debian version, and
others are new to plutitls+.